fixed logo URL; topbar spacing

--- a/static/css/pci-timo.css
+++ b/static/css/pci-timo.css
@@ -1216,7 +1216,7 @@
     }
 
     #pci-home-header {
-        padding-top: 6rem;
+        padding-top: 9rem;
     }
 
     #pci-home-header,
@@ -1301,13 +1301,13 @@
     #pci-home-header,
     #pci-home-header-large {
         width: 100%;
-        height: 22rem;
+        height: 23rem;
         padding-bottom: 4rem;
     }
 
     #pci-home-header-large {
         width: 100%;
-        height: 22rem;
+        height: 23rem;
         padding-bottom: 4rem;
 
     }
